# ai-lakehouse

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  README.pt-BR.md  SECURITY.md  SETUP.md  deny.toml  docker-compose.gpu.yml
.cargo/: audit.toml  config.toml
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md
.oss-fuzz/: Dockerfile  build.sh  project.yaml
ailake-bench/: Cargo.toml
ailake-bench/scripts/: deeplake_bench.py  download_sift1m.sh
ailake-bench/src/: bench_result.rs  dataset.rs  lancedb_bench.rs  main.rs  metrics.rs  pgvector_bench.rs
ailake-catalog/: Cargo.toml
ailake-catalog/proptest-regressions/: avro_manifest.txt
ailake-catalog/src/: avro_manifest.rs  avro_raw.rs  column_stats.rs  databricks.rs  ducklake.rs  glue.rs  hadoop.rs  jdbc.rs  lib.rs  manifest_commit.rs  metadata.rs  nessie.rs  provider.rs  puffin.rs  rest.rs  schema_evolution.rs  snapshot.rs
ailake-cli/: Cargo.toml
ailake-cli/src/: main.rs  serve.rs
ailake-core/: Cargo.toml
ailake-core/src/: episodic.rs  error.rs  filter.rs  lib.rs  schema.rs  types.rs
ailake-cpp/: CMakeLists.txt  README.md
ailake-cpp/examples/: search.cpp
ailake-cpp/include/ailake/: ailake.hpp  binary.hpp  bincode.hpp  catalog.hpp  chacha12.hpp  distance.hpp  footer.hpp  hardware.hpp  hnsw.hpp  ivfpq.hpp  rabitq.hpp  schema.hpp  write.hpp
ailake-cpp/include/ailake/cuda/: distance.cuh
ailake-cpp/include/ailake/rocm/: blas.hpp
ailake-cpp/src/: catalog.cpp  search.cpp
ailake-cpp/testdata/: multimodal_fixture.parquet
ailake-cpp/tests/: test_binary.cpp  test_catalog_paths.cpp  test_footer.cpp  test_fts.cpp  test_hnsw.cpp  test_ivfpq.cpp  test_write.cpp
ailake-file/: Cargo.toml
ailake-file/benches/: write.rs
ailake-file/src/: footer.rs  lib.rs  reader.rs  writer.rs
ailake-file/tests/: fts_section.rs
ailake-flink/: build.gradle.kts  settings.gradle.kts
ailake-fts/: Cargo.toml
ailake-fts/src/: blob.rs  builder.rs  lib.rs  searcher.rs  tokenizers.rs
ailake-go/: README.md  ailake.go  ailake_test.go  binary.go  go.mod  (+24 more)
ailake-index/: Cargo.toml
ailake-index/benches/: search.rs
ailake-index/src/: binary.rs  gpu.rs  hardware.rs  hnsw.rs  ivf_pq.rs  lib.rs  mmap_loader.rs  rabitq.rs  serialize.rs
ailake-index/tests/: gpu_data.rs
ailake-jni/: Cargo.toml  README.md
ailake-jni/src/: lib.rs
ailake-parquet/: Cargo.toml
ailake-parquet/src/: lib.rs  reader.rs  schema.rs  writer.rs
ailake-py/: Cargo.toml  README.md  pyproject.toml
ailake-py/python/ailake/: __init__.py  _ailake.pyi
ailake-py/src/: lib.rs
ailake-py/tests/: test_capability_parity.py
ailake-query/: Cargo.toml
ailake-query/examples/: demo.rs  write_fixture.rs
ailake-query/src/: backfill.rs  bloom.rs  bm25.rs  compaction.rs  context_assembler.rs  delete.rs  dv.rs  equality_delete.rs  index_loader.rs  lib.rs  loom_tests.rs  mem_table.rs  memory_decay.rs  migration.rs  pruner.rs  scanner.rs  schema_filler.rs  writer.rs
ailake-store/: Cargo.toml
ailake-store/src/: azure.rs  fail_store.rs  from_url.rs  gcs.rs  lib.rs  local.rs  object_store_backend.rs  s3.rs  store.rs
ailake-vec/: Cargo.toml
ailake-vec/src/: binary_quant.rs  compress.rs  distance.rs  lib.rs  pq.rs  quantize.rs  rabitq.rs
airbyte-destination-ailake/: Dockerfile  README.md  pyproject.toml
airbyte-destination-ailake/airbyte_destination_ailake/: __init__.py  config.py  destination.py  embedder.py  spec.json  writer.py
airbyte-destination-ailake/demo/: demo_local.py  demo_local_models.py  demo_openai.py  embed_cmd.py
airbyte-destination-ailake/tests/: test_destination.py
airflow-providers-ailake/: README.md  pyproject.toml
airflow-providers-ailake/airflow_providers_ailake/: __init__.py
airflow-providers-ailake/airflow_providers_ailake/hooks/: ailake.py
airflow-providers-ailake/airflow_providers_ailake/operators/: ailake.py
airflow-providers-ailake/airflow_providers_ailake/sensors/: ailake.py
airflow-providers-ailake/tests/: test_provider.py
duckdb-ailake/: CMakeLists.txt  README.md
duckdb-ailake/include/: ailake_extension.hpp
duckdb-ailake/scripts/: append_extension_metadata.py
duckdb-ailake/src/: ailake_compact.cpp  ailake_create_table.cpp  ailake_delete.cpp  ailake_evolve_schema.cpp  ailake_extension.cpp  ailake_scan_table.cpp  ailake_search.cpp  ailake_search_multimodal.cpp  ailake_search_text.cpp  ailake_write.cpp  ailake_write_batch_multi.cpp
duckdb-ailake/test/: test_compact.py  test_create_table.py  test_delete.py  test_evolve.py  test_multimodal.py  test_scan.py  test_search.py  test_write.py  test_write_multi.py
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_ailake_file_reader.rs  fuzz_ailake_header.rs  fuzz_avro_manifest.rs  fuzz_bincode_hnsw.rs  fuzz_fts_blob.rs  fuzz_json_apis.rs  fuzz_parquet_reader.rs
tests/: Cargo.toml
tests/compat/: check_ailake_py.py  check_duckdb.py  check_jni_cabi.py  check_pyarrow.py  check_pyiceberg.py
tests/docker/: compose-demo-engines.yml  compose-demo.yml  compose-engines.yml  compose.yml
tests/docker/demo/: Dockerfile  Dockerfile.airflow  Dockerfile.flink  Dockerfile.trino  airflow-entrypoint.sh  entrypoint.sh  init_demo.py
tests/docker/demo/dags/: dag_ailake_compaction.py  dag_ailake_hook_ops.py  dag_ailake_ingest_search.py
tests/docker/demo/notebooks/: 01_ailake_demo.ipynb  02_duckdb.ipynb  03_spark.ipynb  04_trino.ipynb  05_bigquery.ipynb  06_airbyte_destination.ipynb  07_multimodal.ipynb  08_agents.ipynb  09_hybrid_search.ipynb  10_gpu_demo.ipynb  11_fts.ipynb  12_airflow.ipynb  13_ducklake.ipynb  14_flink.ipynb
tests/docker/demo/trino-catalog/: ailake.properties  ailake_native.properties
tests/fixtures/: write_fixture.py  write_jni_fixture.py
tests/src/: lib.rs
tests/tests/: cli_hybrid_search.rs  concurrent_search_compact.rs  concurrent_writes.rs  context_assembler.rs  fts_fast_path.rs  hybrid_search.rs  iceberg_compat.rs  parquet_trailing_bytes.rs  partition_isolation.rs  positional_invariant.rs  vector_pruning.rs  write_read_roundtrip.rs
tests/tests/fixtures/: mod.rs
(+109 files in other folders)
