[workspace]
resolver = "2"
members = [
    "ailake-core",
    "ailake-parquet",
    "ailake-vec",
    "ailake-index",
    "ailake-file",
    "ailake-catalog",
    "ailake-store",
    "ailake-query",
    "tests",
    "ailake-jni",
    "ailake-bench",
    # Phase 4 bindings — excluded until PyO3/maturin env is configured
    # "ailake-py",
]

[workspace.dependencies]
# Core
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
uuid        = { version = "1", features = ["v4", "serde"] }
thiserror   = "1"
bytes       = "1"
half        = { version = "2", features = ["serde"] }
async-trait = "0.1"

# Async
tokio       = { version = "1", features = ["rt-multi-thread", "io-util", "fs", "sync", "time", "macros"] }
futures     = "0.3"

# Data
parquet      = { version = "52", features = ["async"] }
arrow-array  = "52"
arrow-schema = "52"
arrow-select = "52"
arrow-buffer = "52"
object_store = { version = "0.10" }  # cloud features added per-crate via ailake-store feature flags

# Iceberg
iceberg     = "0.3"
apache-avro = "0.16"

# Vector index
hnsw_rs     = "0.3"
bincode     = "1"
memmap2     = "0.9"
rayon       = "1"

# Runtime dynamic library loading — GPU backend detection without build-time SDK
libloading  = "0.8"

# Compression
lz4_flex    = "0.11"
zstd        = "0.13"

# Catalog backends
reqwest     = { version = "0.12", features = ["json"] }

# Bindings
pyo3        = { version = "0.21", features = ["extension-module"] }
uniffi      = "0.27"

# Observability
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Dev/test
criterion   = { version = "0.5", features = ["html_reports"] }
tempfile    = "3"
proptest    = "1"
rand        = "0.8"

[profile.release]
lto           = "thin"
codegen-units = 1
opt-level     = 3
strip         = "symbols"
panic         = "abort"

[profile.bench]
inherits    = "release"
debug       = true
