[package]
name = "ailake-bench"
version     = "0.0.9"
edition = "2021"
publish = false
description = "Public benchmark: AI-Lake vs. LanceDB on SIFT-1M"

[[bin]]
name = "ailake-bench"
path = "src/main.rs"

[features]
lancedb-bench  = ["dep:lancedb", "dep:futures", "dep:aa58", "dep:as58"]
pgvector-bench = ["dep:pgvector", "dep:tokio-postgres", "dep:futures", "dep:bytes"]

[dependencies]
ailake-catalog = { path = "../ailake-catalog" }
ailake-core    = { path = "../ailake-core" }
ailake-index   = { path = "../ailake-index" }
ailake-query   = { path = "../ailake-query" }
ailake-store   = { path = "../ailake-store" }

tokio        = { workspace = true }
arrow-array  = { workspace = true }
arrow-schema = { workspace = true }
tempfile     = { workspace = true }
anyhow       = "1"
clap         = { version = "4", features = ["derive"] }

lancedb        = { version = "0.29", optional = true }
futures        = { version = "0.3",  optional = true }
# Arrow v58 aliases — same version lancedb 0.29 uses; Cargo deduplicates the compile unit
aa58 = { package = "arrow-array",  version = "58", optional = true }
as58 = { package = "arrow-schema", version = "58", optional = true }

pgvector       = { version = "0.4", features = ["postgres"], optional = true }
tokio-postgres = { version = "0.7", optional = true }
bytes          = { version = "1",   optional = true }
