[package]
name = "ailake-catalog"
version = "0.1.0"
edition = "2021"

[dependencies]
ailake-core  = { path = "../ailake-core" }
ailake-store = { path = "../ailake-store" }
serde        = { workspace = true }
serde_json   = { workspace = true }
tokio        = { workspace = true }
async-trait  = { workspace = true }
thiserror    = { workspace = true }
uuid         = { workspace = true }
bytes        = { workspace = true }
base64       = "0.22"

[dev-dependencies]
tempfile    = { workspace = true }
tokio       = { workspace = true }
