[package]
name = "ailake-catalog"
version = "0.0.5"
edition = "2021"

[features]
catalog-glue   = ["dep:aws-sdk-glue", "dep:aws-config"]
catalog-nessie = []
catalog-jdbc   = ["dep:sqlx"]

[dependencies]
ailake-core  = { path = "../ailake-core" }
ailake-store = { path = "../ailake-store" }
serde        = { workspace = true }
serde_json   = { workspace = true }
tokio        = { workspace = true }
async-trait  = { workspace = true }
thiserror    = { workspace = true }
uuid         = { workspace = true }
bytes        = { workspace = true }
reqwest      = { workspace = true }
base64       = "0.22"

# catalog-glue optional deps
aws-sdk-glue = { version = "1", optional = true }
aws-config   = { version = "1", features = ["behavior-version-latest"], optional = true }

# catalog-jdbc optional deps
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "mysql", "sqlite", "any"], optional = true }

[dev-dependencies]
tempfile    = { workspace = true }
tokio       = { workspace = true }
