[package]
name        = "ailake-cli"
version     = "0.0.16"
edition     = "2021"
description = "AI-Lake Format — administrative CLI (create, insert, search, compact, info)"
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/ThiagoLange/ai-lakehouse"
keywords    = ["cli", "iceberg", "vector", "lakehouse", "vector-search"]
categories  = ["command-line-utilities", "database"]

[[bin]]
name = "ailake"
path = "src/main.rs"

[dependencies]
ailake-core    = { path = "../ailake-core", version     = "0.0.16" }
ailake-store   = { path = "../ailake-store", version     = "0.0.16", features = ["store-s3", "store-gcs", "store-azure"] }
ailake-catalog = { path = "../ailake-catalog", version     = "0.0.16" }
ailake-parquet = { path = "../ailake-parquet", version     = "0.0.16" }
ailake-query   = { path = "../ailake-query", version     = "0.0.16" }
bytes          = { workspace = true }
clap           = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json     = { workspace = true }
serde          = { workspace = true }
axum           = { workspace = true }
arrow-array    = { workspace = true }
arrow-schema   = { workspace = true }
