[package]
name        = "ailake-cli"
version = "0.1.4"
edition     = "2021"
description = "AI-Lake Format — administrative CLI (create, insert, search, compact, info)"
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/ThiagoLange/ai-lakehouse"
keywords    = ["cli", "iceberg", "vector", "lakehouse", "vector-search"]
categories  = ["command-line-utilities", "database"]

[features]
catalog-ducklake = ["ailake-catalog/catalog-ducklake"]

[[bin]]
name = "ailake"
path = "src/main.rs"

[dependencies]
ailake-core    = { path = "../ailake-core", version = "0.1.4" }
ailake-store   = { path = "../ailake-store", version = "0.1.4", features = ["store-s3", "store-gcs", "store-azure"] }
ailake-catalog = { path = "../ailake-catalog", version = "0.1.4" }
ailake-parquet = { path = "../ailake-parquet", version = "0.1.4" }
ailake-query   = { path = "../ailake-query", version = "0.1.4" }
ailake-fts     = { workspace = true }
bytes          = { workspace = true }
clap           = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json     = { workspace = true }
serde          = { workspace = true }
axum           = { workspace = true }
arrow-array    = { workspace = true }
arrow-schema   = { workspace = true }

[dev-dependencies]
tempfile       = { workspace = true }
