[package]
name = "ailake-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
uuid        = { workspace = true }
thiserror   = { workspace = true }
half        = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
proptest    = { workspace = true }
