[package]
name        = "ailake-core"
version     = "0.0.17"
edition     = "2021"
description = "Core types and traits for the AI-Lake vector-native Lakehouse format"
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/ThiagoLange/ai-lakehouse"
keywords    = ["iceberg", "vector", "lakehouse", "embedding", "parquet"]
categories  = ["database", "data-structures", "encoding"]

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
uuid        = { workspace = true }
thiserror   = { workspace = true }
half        = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
proptest    = { workspace = true }
