[package]
name        = "ailake-file"
version     = "0.0.5"
edition     = "2021"
description = "Self-contained AI-Lake file writer/reader — Parquet extended with HNSW footer"
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/ThiagoLange/iceberg-ai-deltalakehouse"
keywords    = ["parquet", "vector", "hnsw", "iceberg", "lakehouse"]
categories  = ["database", "encoding", "filesystem"]

[dependencies]
ailake-core    = { path = "../ailake-core" }
ailake-parquet = { path = "../ailake-parquet" }
ailake-vec     = { path = "../ailake-vec" }
ailake-index   = { path = "../ailake-index" }
arrow-array    = { workspace = true }
arrow-schema   = { workspace = true }
thiserror      = { workspace = true }
bytes          = { workspace = true }

[dev-dependencies]
tempfile    = { workspace = true }
rand        = { workspace = true }
criterion   = { workspace = true }

[[bench]]
name = "write"
harness = false
