[package]
name        = "ailake-file"
version = "0.0.20"
edition     = "2021"
description = "Self-contained AI-Lake file writer/reader — Parquet extended with HNSW footer"
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/ThiagoLange/ai-lakehouse"
keywords    = ["parquet", "vector", "hnsw", "iceberg", "lakehouse"]
categories  = ["database", "encoding", "filesystem"]

[dependencies]
ailake-core    = { path = "../ailake-core", version = "0.0.20" }
ailake-parquet = { path = "../ailake-parquet", version = "0.0.20" }
ailake-vec     = { path = "../ailake-vec", version = "0.0.20" }
ailake-index   = { path = "../ailake-index", version = "0.0.20" }
arrow-array    = { workspace = true }
arrow-schema   = { workspace = true }
thiserror      = { workspace = true }
bytes          = { workspace = true }

[dev-dependencies]
tempfile    = { workspace = true }
rand        = { workspace = true }
