[package]
name        = "ailake-fts"
version     = "0.0.19"
edition     = "2021"
description = "Tantivy per-file FTS index embedded in the AILK_FTS section"
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/ThiagoLange/ai-lakehouse"

[dependencies]
ailake-core = { path = "../ailake-core", version = "0.0.19" }
tantivy     = { workspace = true }
zstd        = { workspace = true }
arrow-array  = { workspace = true }
arrow-schema = { workspace = true }
bytes        = { workspace = true }
