[package]
name        = "ailake-fts"
version     = "0.0.20"
edition     = "2021"
description = "Tantivy per-file FTS index embedded in the AILK_FTS section"
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/ThiagoLange/ai-lakehouse"

[features]
## Register Snowball stemmers for 17 non-English languages in every FTS index build.
## Tokenizer names: fr_stem de_stem es_stem pt_stem it_stem nl_stem ru_stem
## ar_stem sv_stem da_stem fi_stem no_stem el_stem hu_stem ro_stem ta_stem tr_stem.
## Uses rust_stemmers already compiled into Tantivy — no extra binary weight.
fts-stemmer-langs = []

[dependencies]
ailake-core = { path = "../ailake-core", version = "0.0.20" }
tantivy     = { workspace = true }
zstd        = { workspace = true }
arrow-array  = { workspace = true }
arrow-schema = { workspace = true }
bytes        = { workspace = true }
