[package]
name = "ailake-index"
version = "0.1.0"
edition = "2021"

[dependencies]
ailake-core  = { path = "../ailake-core" }
ailake-vec   = { path = "../ailake-vec" }
half         = { workspace = true }
serde        = { workspace = true }
bincode      = { workspace = true }
rand         = { workspace = true }
thiserror    = { workspace = true }
memmap2      = { workspace = true }
tempfile     = { workspace = true }
rayon        = { workspace = true }
libloading   = { workspace = true }

[dev-dependencies]
rand        = { workspace = true }
criterion   = { workspace = true }

[[bench]]
name = "search"
harness = false
