[package]
name        = "ailake-index"
version = "0.1.2"
edition     = "2021"
description = "HNSW and IVF-PQ vector indexes with GPU acceleration for AI-Lake"
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/ThiagoLange/ai-lakehouse"
keywords    = ["hnsw", "vector-search", "ann", "embedding", "ivf"]
categories  = ["algorithms", "database", "science"]

[dependencies]
ailake-core  = { path = "../ailake-core", version = "0.1.2" }
ailake-vec   = { path = "../ailake-vec", version = "0.1.2" }
half         = { workspace = true }
serde        = { workspace = true }
bincode      = { workspace = true }
rand         = { workspace = true }
thiserror    = { workspace = true }
memmap2      = { workspace = true }
tempfile     = { workspace = true }
rayon        = { workspace = true }
libloading   = { workspace = true }
tracing      = { workspace = true }

[dev-dependencies]
rand        = { workspace = true }
