[package]
name        = "ailake-parquet"
version = "0.0.27"
edition     = "2021"
description = "Parquet reader/writer with VECTOR column type for the AI-Lake format"
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/ThiagoLange/ai-lakehouse"
keywords    = ["parquet", "arrow", "vector", "iceberg", "embedding"]
categories  = ["database", "encoding", "data-structures"]

[dependencies]
ailake-core  = { path = "../ailake-core", version = "0.0.27" }
ailake-vec   = { path = "../ailake-vec", version = "0.0.27" }
parquet      = { workspace = true }
arrow-array  = { workspace = true }
arrow-schema = { workspace = true }
arrow-select = { workspace = true }
arrow-buffer = { workspace = true }
bytes        = { workspace = true }
half         = { workspace = true }
thiserror    = { workspace = true }

[dev-dependencies]
tempfile    = { workspace = true }
tokio       = { workspace = true }
rand        = { workspace = true }
