[package]
name        = "ailake-py"
version     = "0.0.7"
edition     = "2021"
description = "Python bindings for AI-Lake (distributed via PyPI, not crates.io)"
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/ThiagoLange/iceberg-ai-deltalakehouse"
publish     = false

[lib]
name = "ailake"
crate-type = ["cdylib"]

[dependencies]
ailake-query   = { path = "../ailake-query" }
ailake-core    = { path = "../ailake-core" }
ailake-catalog = { path = "../ailake-catalog" }
ailake-store   = { path = "../ailake-store" }
pyo3           = { workspace = true }
tokio          = { workspace = true }
arrow-array    = { workspace = true }
arrow-schema   = { workspace = true }
