[package]
name        = "ailake-py"
version = "0.0.20"
edition     = "2021"
description = "Python bindings for AI-Lake (distributed via PyPI, not crates.io)"
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/ThiagoLange/ai-lakehouse"
publish     = false

[lib]
name = "ailake"
crate-type = ["cdylib"]

[dependencies]
ailake-query   = { path = "../ailake-query" }
ailake-core    = { path = "../ailake-core" }
ailake-catalog = { path = "../ailake-catalog" }
ailake-store   = { path = "../ailake-store" }
pyo3           = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }
arrow-array    = { workspace = true }
arrow-schema   = { workspace = true }
arrow-ipc      = "52"
# Force vendored OpenSSL: targets openssl-sys directly so Cargo feature
# unification activates vendored on the exact package that fails in manylinux
# containers (where openssl-devel is absent and pkg-config can't find openssl).
openssl-sys    = { version = "0.9", features = ["vendored"] }
