[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "ailake"
version = "0.0.6"
description = "AI-Lake Format Python SDK"
requires-python = ">=3.9"
dependencies = ["pyarrow>=14.0", "numpy>=1.24"]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "ailake"
