[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "ailake"
version     = "0.0.8"
description = "Unified tabular + vector storage in a single Iceberg-compatible file"
readme      = "README.md"
license     = { text = "MIT OR Apache-2.0" }
authors     = [{ name = "Thiago Egon Lange", email = "thiago.egon@gmail.com" }]
requires-python = ">=3.9"
dependencies = ["pyarrow>=14.0", "numpy>=1.24"]
keywords    = ["lakehouse", "iceberg", "vector", "embeddings", "rag", "hnsw"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
]

[project.urls]
Repository    = "https://github.com/ThiagoLange/iceberg-ai-deltalakehouse"
"Bug Tracker" = "https://github.com/ThiagoLange/iceberg-ai-deltalakehouse/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "ailake"
