[package]
name        = "ailake-query"
version     = "0.0.17"
edition     = "2021"
description = "Query planner and executor for AI-Lake — vector search, compaction, ContextAssembler"
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/ThiagoLange/ai-lakehouse"
keywords    = ["vector-search", "iceberg", "lakehouse", "hnsw", "rag"]
categories  = ["database", "algorithms"]

[dependencies]
ailake-core    = { path = "../ailake-core", version     = "0.0.17" }
ailake-file    = { path = "../ailake-file", version     = "0.0.17" }
ailake-catalog = { path = "../ailake-catalog", version     = "0.0.17" }
ailake-store   = { path = "../ailake-store", version     = "0.0.17" }
ailake-index   = { path = "../ailake-index", version     = "0.0.17" }
ailake-vec     = { path = "../ailake-vec", version     = "0.0.17" }
ailake-parquet = { path = "../ailake-parquet", version     = "0.0.17" }
arrow-array    = { workspace = true }
arrow-schema   = { workspace = true }
arrow-select   = { workspace = true }
tokio          = { workspace = true }
bytes          = { workspace = true }
serde_json     = { workspace = true }
thiserror      = { workspace = true }
rayon          = { workspace = true }
tracing        = { workspace = true }

[dev-dependencies]
tempfile    = { workspace = true }
rand        = { workspace = true }
serde_json  = { workspace = true }

[[example]]
name = "demo"

[[example]]
name = "write_fixture"
