[package]
name        = "ailake-query"
version = "0.1.3"
edition     = "2021"
description = "Query planner and executor for AI-Lake — vector search, compaction, ContextAssembler"
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/ThiagoLange/ai-lakehouse"
keywords    = ["vector-search", "iceberg", "lakehouse", "hnsw", "rag"]
categories  = ["database", "algorithms"]

[dependencies]
ailake-core    = { path = "../ailake-core", version = "0.1.3" }
ailake-fts     = { workspace = true }
ailake-file    = { path = "../ailake-file", version = "0.1.3" }
ailake-catalog = { path = "../ailake-catalog", version = "0.1.3" }
ailake-store   = { path = "../ailake-store", version = "0.1.3" }
ailake-index   = { path = "../ailake-index", version = "0.1.3" }
ailake-vec     = { path = "../ailake-vec", version = "0.1.3" }
ailake-parquet = { path = "../ailake-parquet", version = "0.1.3" }
arrow-array    = { workspace = true }
arrow-schema   = { workspace = true }
arrow-select   = { workspace = true }
tokio          = { workspace = true }
bytes          = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
bincode        = { workspace = true }
zstd           = { workspace = true }
thiserror      = { workspace = true }
futures        = { workspace = true }
rayon          = { workspace = true }
tracing        = { workspace = true }
roaring        = { workspace = true }

[dev-dependencies]
tempfile    = { workspace = true }
rand        = { workspace = true }
serde_json  = { workspace = true }

[[example]]
name = "demo"

[[example]]
name = "write_fixture"
